<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="action_share" >Share</string>
    <string name="action_share_title" >Listen to this</string>
    <string name="action_share_content" >Hey there, Listen to this song! <xliff:g id="song">%1s</xliff:g></string>

    <string name="content_authority" translatable="false">nl.idesign.spotifystreamer</string>

    <string name="app_name">Spotify Streamer</string>
    <string name="title_activity_top_tracks">Top 10 Tracks</string>

    <string name="action_settings">Settings</string>

    <!-- Search strings -->
    <string name="spotify_search">Artist name</string>
    <string name="spotify_search_content_description">artist %s image</string>

    <string name="spotify_search_failed_title">Something went wrong..</string>
    <string name="spotify_search_failed_desc">Something went wrong looking for the artists</string>

    <string name="spotify_search_no_results_title">Nothing to show</string>
    <string name="spotify_search_no_results">Hmmm, we can\'t find the artist you are looking for. Please try with different keywords.  </string>

    <!-- Top tracks strings -->
    <string name="spotify_top_tracks_content_description">Album %s image</string>

    <string name="spotify_toptracks_failed">No top tracks were fetched from the server</string>

    <!-- Connectivity messages -->
    <string name="no_connection_title" >Not connected</string>
    <string name="no_connection_description" >Hmm, It seems you\'re not connected to the internet. To use this app, you need to be connected to the cloud</string>
    <string name="title_activity_player">PlayerActivity</string>

    <!-- Spotify Player Strings -->
    <string name="no_track_id" >No trackid is found</string>

    <string name="player_playback_error" >Can\'t playback</string>
    <string name="player_playback_error_desc" >Something went wrong while streaming the track. Would you like to try again?</string>

    <string name="country_use_default">Use default</string>
    <string name="country_use_netherlands">Netherlands</string>
    <string name="country_use_uk">United Kingdom</string>
    <string name="country_use_usa">United States</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>

    <string name="content_description_album_image">Album image for <xliff:g id="song">%1s</xliff:g> - <xliff:g id="song">%2s</xliff:g></string>
    <string name="content_description_artist_image">Artist image for <xliff:g id="song">%1s</xliff:g></string>
    <string name="content_description_play_track">Play track</string>
    <string name="content_description_previous_track">Previous track</string>
    <string name="content_description_next_track">Next track</string>

</resources>
