<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone|actionGo|actionSearch"
        android:queryHint="@string/spotify_search"
        android:id="@+id/spotify_search_textview"
        android:singleLine="true"
        android:iconifiedByDefault="false"
        android:showDividers="beginning"></SearchView>
    <ListView
        android:id="@+id/spotify_search_result_listview"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        tools:listitem="@layout/spotify_search_result_list_item"
       />
    <LinearLayout
        android:id="@+id/nothing_found_layout"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/spotify_search_no_results_title" />
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/spotify_search_no_results" />
    </LinearLayout>
</LinearLayout>