<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:background="@android:color/background_dark"
    android:layout_height="64dp">
        <ImageView
            android:id="@+id/spotify_player_album_image"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_album_image"
            android:src="@drawable/no_image"/>
        <LinearLayout
            android:layout_toRightOf="@+id/spotify_player_album_image"
            android:layout_centerVertical="true"
            android:layout_marginRight="150dp"
            android:layout_width="fill_parent"
            android:paddingLeft="4dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/spotify_player_artist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="@android:color/white"
                />
            <TextView
                android:id="@+id/spotify_player_track_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <ImageButton
            android:layout_toLeftOf="@+id/spotify_player_play_image_button"
            android:id="@+id/spotify_player_previous_image_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_description_previous_track"
            android:src="@android:drawable/ic_media_previous"
            />
        <ImageButton
            android:layout_toLeftOf="@+id/spotify_player_next_image_button"
            android:id="@+id/spotify_player_play_image_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_media_play"
            android:contentDescription="@string/content_description_play_track"
            />
        <ImageButton
            android:layout_alignParentRight="true"
            android:id="@+id/spotify_player_next_image_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_media_next"
            android:contentDescription="@string/content_description_next_track"
            />
</RelativeLayout>